Modified setup to be production ready.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: guestbook
+    container_name: tekkipodi-guestbook
     ports:
       - "3000:3000"
     environment:
@@ -17,6 +17,8 @@ services:
       # Persist database across container restarts
       - ./data:/app/data
     restart: unless-stopped
+    networks:
+      - proxy-net
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/api/guestbook"]
       interval: 30s
@@ -24,3 +26,6 @@ services:
       retries: 3
       start_period: 40s
 
+networks:
+  proxy-net:
+    external: true
